thirdparty/boost/libs/type_traits/test/compile_fail/.uuid
a655df91-41f0-496a-bdec-90fb1220bf05